连接字符串放到配置文件里了 添加CORS

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost:1521/orcl;User Id=Catji;Password=tongji;Persist Security Info=True;"
+  }
 }
