接口19 20 21，连接数据库改为云端，略修改查询

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost:1521/orcl;User Id=Catji;Password=tongji;Persist Security Info=True;"
+    "DefaultConnection": "Data Source=localhost:1521/orcl;User Id=Catji;Password=tongji;Persist Security Info=True;",
+    "DebugConnection": "Data Source=myweb1008.xyz:1521/orcl;User Id=Catji;Password=tongji;Persist Security Info=True;"
   }
 }
